examples/syntaxErrors/errorParsingPatternApp.lcp
A = ()

myFuncion : A -> A
myFuncion x = x

main : A -> A
main x = ()
main (myFuncion x) = ()
